# SSD-synthesizer

./: spec.json
F_Combined and merged system documentation/: Communication number one _ Comprehensive_System_Documentation_Filled.md  Economic calendar number one _ Comprehensive_System_Documentation_Filled.md  Reentry number one_ Comprehensive_System_Documentation_FILLED.md
F_Economic Calendar Reference documentation/: ECONOMIC_CALENDAR_INTEGRATION_REPORT.md  Economic Calendar Strategy ID Generation.txt  Economic Calendar System - Comprehensive Overview.md  calendar_config_guide.md  calendar_system.py  (+6 more)
F_Signal and communication documentation/: CLAUDE.md  CMakeCache.txt  CMakeLists.txt  COMMUNICATION_DOCUMENTATION_INDEX.md  COMMUNICATION_SYSTEM_DOCUMENTATION.md  COMMUNICATION_TROUBLESHOOTING_GUIDE.md  CSV_COMMUNICATION_PROTOCOL.md  DDL _ README.md  DLL_BUILD_SUMMARY.md  DLL_REQUIREMENTS.md  MQL4_DLL_SocketBridge_README.md  SS_Comprehensive_Component & Service Blueprint_SRS.md  Signal _ analyze your reentry system files to provide.md  U_1_Comprehensive_Component_&_Service_Blueprint.md  U_2_Hierarchical_Communication_Architecture.md  U_3_Remediated_Service_Architecture_and_Functional_Semantics.md  U_4_Remediated_State_Management_and_Persistence.md  U_5_Remediated_Master_Orchestration_Cycle.md  U_MT4_Multi-EA Signal Execution System with Reentry and Optimization.md  dde_structure_guide.md  dependency_manifest.yml  desktop.ini  huey_p_requirements.txt  mt4_signal_interface_spec.md  signal_builder_module.txt  signal_system_process_flow.md  signal_system_technical_spec.md
(+151 files in other folders)
